<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="topping">Topping</string>
    <string name="name">Name</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank You!</string>
    <string name="total">Total: <xliff:g id="dollar_sign">$</xliff:g> </string>
    <string name="add_chocolate">Add chocolate? </string>
    <string name="add_whipped_cream">Add whipped cream? </string>
    <string name="quantityj">Quantity: </string>
    <!--Do not translate some of the text -->
    <string name="order_name">Name: <xliff:g id="name" example="Grete">%s</xliff:g></string>
</resources>
